# aspid

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yml
crates/aspid/: Cargo.toml
crates/aspid-core/: Cargo.toml
crates/aspid-core/src/: archive.rs  config.rs  error.rs  game.rs  launch.rs  lib.rs  modapi.rs  modlinks.rs  modpack.rs  mods.rs  net.rs  paths.rs  share.rs  skins.rs  version.rs
crates/aspid-core/tests/: real_catalog.rs
crates/aspid/src/: main.rs  scroll_speed.rs  style.rs  theme.rs
nix/: package.nix  runtime-libs.nix
