[workspace]
resolver = "2"
members = ["crates/aspid-core", "crates/aspid"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["marley <marley@marlstar.com>"]
license = "MIT"
repository = "https://github.com/marlstar/aspid"

[workspace.dependencies]
aspid-core = { path = "crates/aspid-core" }

# async
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "io-util"] }
futures-util = "0.3"

# net
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# platform / fs
steamlocate = "2"
directories = "5"

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
zip = "2"
sha2 = "0.10"
hex = "0.4"
semver = "1"
base64 = "0.22"

# diagnostics
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
# wild linker is configured via devenv; keep dev builds snappy
opt-level = 0
