[package]
name = "aspid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic for aspid, a Hollow Knight mod manager"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
reqwest.workspace = true
steamlocate.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
quick-xml.workspace = true
zip.workspace = true
sha2.workspace = true
hex.workspace = true
semver.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
